# experiment-smolagent

./: .gitignore  .pre-commit-config.yaml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  demo.py  example_usage.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.rst  conf.py  getting_started.md  index.rst  sg_execution_times.rst  user_guide.md
examples/: README.rst  plot_calculator_agent.py  plot_custom_tools.py
smolagent/: __init__.py  agent.py  calculator_tools.py
src/agentexp/: __init__.py  agent.py  calculator_tools.py  llm.py  tools.py
tests/: test_agent.py  test_calculator_tools.py  test_llm.py  test_tools.py
